--- a/src/components/DarkLightToggleSwitch/DarkLightToggleSwitch.module.scss
+++ b/src/components/DarkLightToggleSwitch/DarkLightToggleSwitch.module.scss
@@ -1,4 +1,7 @@
+@use "../../variables" as v;
+
 $panel-height: 40px;
+$icon-size: $panel-height - 8px;
 $switch-size: $panel-height - 6px;
 $switch-margin: 4px;
 
@@ -10,11 +13,11 @@ $switch-margin: 4px;
   padding: 0 4px;
   width: 80px;
   height: $panel-height;
-  background-color: navy;
-  color: white;
+  background-color: v.$primary-color-dark;
+  color: v.$accent-color;
   border: none;
   border-radius: ceil($panel-height / 2);
-  font-size: 2rem;
+  font-size: $panel-height - 8px;
 }
 
 .switch {
@@ -25,7 +28,7 @@ $switch-margin: 4px;
   height: $switch-size;
   width: $switch-size;
   border-radius: 50%;
-  background-color: red;
+  background-color: v.$primary-color-light;
 
   transition: left 0.5s ease;
 }
