Create NavBullet and NavBullets components

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,6 +2,6 @@ $primary-color-dark: #25252d;
 $primary-color-medium: #6f6f89;
 $primary-color-light: #b5b5c0;
 $secondary-color: #d8a3b5;
-$secondary-color-2: #5fe88d;
-$secondary-color-3: #ff9eb5;
+$secondary-color-two: #5fe88d;
+$secondary-color-three: #ff9eb5;
 $accent-color: #fff44f;
