--- a/src/components/DarkLightToggleSwitch/DarkLightToggleSwitch.module.scss
+++ b/src/components/DarkLightToggleSwitch/DarkLightToggleSwitch.module.scss
@@ -1,6 +1,7 @@
+@use "sass:math";
 @use "../../variables" as v;
 
-$panel-height: 40px;
+$panel-height: 41px;
 $icon-size: $panel-height - 8px;
 $switch-size: $panel-height - 6px;
 $switch-margin: 4px;
@@ -16,7 +17,7 @@ $switch-margin: 4px;
   background-color: v.$primary-color-dark;
   color: v.$accent-color;
   border: none;
-  border-radius: ceil($panel-height / 2);
+  border-radius: ceil(math.div($panel-height, 2));
   font-size: $panel-height - 8px;
 }
 
