--- a/src/components/MainHero/MainHero.module.scss
+++ b/src/components/MainHero/MainHero.module.scss
@@ -1,12 +1,15 @@
 @use "../../variables" as v;
 
 .hero {
-  width: 100vw;
-  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 95vh;
   font-family: "Gochi Hand", "cursive";
-  font-size: 2rem;
 
-  transition: all 0.55s ease;
+  transition: background-color 0.55s ease, color 0.55s ease;
 }
 
 .hero-light {
@@ -15,5 +18,15 @@
 
 .hero-dark {
   background-color: v.$primary-color-dark;
-  color: v.$secondary-color-2;
+  color: v.$secondary-color-two;
+}
+
+.greeting {
+  font-size: 4rem;
+}
+
+.description {
+  width: 50%;
+  text-align: center;
+  font-size: 1.5rem;
 }
