--- a/src/components/DarkLightToggleSwitch/DarkLightToggleSwitch.module.scss
+++ b/src/components/DarkLightToggleSwitch/DarkLightToggleSwitch.module.scss
@@ -1,5 +1,5 @@
 @use "sass:math";
-@use "../../variables" as v;
+@use "../../partials/variables" as v;
 
 $panel-height: 41px;
 $icon-size: $panel-height - 8px;
