Set up refs for sections and type-check the forwardRefs

--- a/src/sections/AboutSection/AboutSection.module.scss
+++ b/src/sections/AboutSection/AboutSection.module.scss
@@ -2,4 +2,12 @@
 
 .about {
   @include m.section-dimensions;
+  scroll-snap-align: start;
+}
+
+// .about-light {
+// }
+
+.about-dark {
+  @include m.dark-theme-template;
 }
