--- a/src/sections/IntroductionSection/IntroductionSection.module.scss
+++ b/src/sections/IntroductionSection/IntroductionSection.module.scss
@@ -17,8 +17,7 @@
 }
 
 .hero-dark {
-  background-color: v.$primary-color-dark;
-  color: v.$secondary-color-two;
+  @include m.dark-theme-template;
 }
 
 .greeting {
