--- a/src/sections/ProjectsSection/ProjectsSection.module.scss
+++ b/src/sections/ProjectsSection/ProjectsSection.module.scss
@@ -2,4 +2,12 @@
 
 .projects {
   @include m.section-dimensions;
+  scroll-snap-align: start;
+}
+
+// .projects-light {
+// }
+
+.projects-dark {
+  @include m.dark-theme-template;
 }
