--- a/src/partials/_mixins.scss
+++ b/src/partials/_mixins.scss
@@ -1,4 +1,11 @@
+@use "./variables" as v;
+
 @mixin section-dimensions {
   width: 100%;
   height: 95vh;
+}
+
+@mixin dark-theme-template {
+  background-color: v.$primary-color-dark;
+  color: v.$secondary-color-two;
 }
