--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,5 +1,13 @@
+html {
+  overflow: hidden;
+  scrollbar-width: none;
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 .app {
-  scroll-snap-type: y mandatory;
   overflow-y: scroll;
   height: 100vh;
+  font-family: "Gochi Hand", "cursive";
 }
