--- a/src/sections/AboutSection/AboutSection.module.scss
+++ b/src/sections/AboutSection/AboutSection.module.scss
@@ -1,8 +1,11 @@
 @use "../../partials/mixins" as m;
 
 .about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   @include m.section-dimensions;
-  scroll-snap-align: start;
+  background-color: blue;
 }
 
 // .about-light {
