Change DarkLightToggleSwitch color and center each NavBullet

--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,4 +1,5 @@
 $primary-color-dark: #25252d;
+$primary-color-dark-tint: #32323d;
 $primary-color-medium: #6f6f89;
 $primary-color-light: #b5b5c0;
 $secondary-color: #d8a3b5;
