--- a/src/components/DarkLightToggleSwitch/DarkLightToggleSwitch.module.scss
+++ b/src/components/DarkLightToggleSwitch/DarkLightToggleSwitch.module.scss
@@ -1,7 +1,7 @@
 @use "sass:math";
 @use "../../partials/variables" as v;
 
-$panel-height: 41px;
+$panel-height: 40px;
 $icon-size: $panel-height - 8px;
 $switch-size: $panel-height - 6px;
 $switch-margin: 4px;
@@ -9,13 +9,12 @@ $switch-margin: 4px;
 .panel {
   position: relative;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  padding: 0 4px;
+  align-items: center;
   width: 80px;
   height: $panel-height;
-  background-color: v.$primary-color-dark;
-  color: v.$accent-color;
+  padding: 0 4px;
+  margin: 0 30px;
   border: none;
   border-radius: ceil(math.div($panel-height, 2));
   font-size: $panel-height - 8px;
@@ -34,7 +33,14 @@ $switch-margin: 4px;
   transition: left 0.55s ease;
 }
 
-.dark-mode {
+.panel-light {
+  background-color: v.$primary-color-dark-tint;
+  color: v.$accent-color;
+}
+
+.panel-dark {
+  background-color: v.$primary-color-dark-tint;
+  color: v.$accent-color;
   .switch {
     left: calc(100% - $switch-size - $switch-margin);
   }
