--- a/src/components/NavBullets/NavBullets.module.scss
+++ b/src/components/NavBullets/NavBullets.module.scss
@@ -15,7 +15,9 @@
 }
 
 .bullet-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 24px;
   height: 24px;
-  text-align: center;
 }
