--- a/src/components/NavBullet/NavBullet.module.scss
+++ b/src/components/NavBullet/NavBullet.module.scss
@@ -1,17 +1,27 @@
 @use "../../partials/variables" as v;
 
 .bullet {
+  position: absolute;
+  top: 50%;
+  left: 50%;
   width: 12px;
   height: 12px;
-  transform: rotate(45deg);
+  transform: translate(-50%, -50%) rotate(45deg);
   border: none;
   background-color: v.$secondary-color;
+
+  transition: transform 300ms ease, padding 300ms ease;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .bullet-expanded {
   width: 20px;
   height: 20px;
-  transform: rotate(0);
+  rotate: 0deg;
+  transform: translate(-50%, -50%) rotate(0);
   border: 2px solid v.$accent-color;
   background-color: transparent;
 }
