--- a/src/components/NavBullets/NavBullets.module.scss
+++ b/src/components/NavBullets/NavBullets.module.scss
@@ -9,15 +9,11 @@
 .bullets {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   gap: 1rem;
 }
 
 .bullet-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: relative;
   width: 24px;
   height: 24px;
 }
