--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,8 +1,9 @@
+$primary-color-dark-shade: #16161a;
 $primary-color-dark: #25252d;
-$primary-color-dark-tint: #32323d;
+$primary-color-dark-tint: #34343f;
+$primary-color-medium-shade: #434351;
 $primary-color-medium: #6f6f89;
 $primary-color-light: #b5b5c0;
 $secondary-color: #d8a3b5;
 $secondary-color-two: #5fe88d;
-$secondary-color-three: #ff9eb5;
 $accent-color: #fff44f;
