Change TS SkillBox icon to svg and begin ContactForm

--- a/src/components/SkillBox/SkillBox.module.scss
+++ b/src/components/SkillBox/SkillBox.module.scss
@@ -11,6 +11,7 @@
   color: v.$primary-color-dark-shade;
   font-family: "Roboto";
   font-size: 1.2rem;
+  user-select: none;
 }
 
 .icon {
@@ -18,4 +19,14 @@
   justify-content: center;
   align-items: center;
   font-size: 2rem;
+}
+
+// Can't directly access classes declared on svg paths
+.svg {
+  path:nth-child(1) {
+    fill: v.$primary-color-dark-shade;
+  }
+  path:nth-child(2) {
+    fill: v.$secondary-color;
+  }
 }
