--- a/src/components/ContactForm/ContactForm.module.scss
+++ b/src/components/ContactForm/ContactForm.module.scss
@@ -1,5 +1,13 @@
 .form {
-  width: 10rem;
-  height: 10rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 20rem;
+  height: 20rem;
   background-color: blue;
+}
+
+.personal-info {
+  display: flex;
 }
