--- a/src/components/ContactForm/ContactForm.module.scss
+++ b/src/components/ContactForm/ContactForm.module.scss
@@ -1,13 +1,14 @@
 .form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
-  width: 20rem;
-  height: 20rem;
+  width: 50%;
+  height: 500px;
   background-color: blue;
 }
 
 .personal-info {
   display: flex;
+  width: 100%;
 }
