--- a/src/components/DarkLightToggleSwitch/DarkLightToggleSwitch.module.scss
+++ b/src/components/DarkLightToggleSwitch/DarkLightToggleSwitch.module.scss
@@ -18,6 +18,7 @@ $switch-margin: 4px;
   border: none;
   border-radius: ceil(math.div($panel-height, 2));
   font-size: $panel-height - 8px;
+  outline: none;
 }
 
 .switch {
