--- a/src/components/NavBullet/NavBullet.module.scss
+++ b/src/components/NavBullet/NavBullet.module.scss
@@ -9,7 +9,7 @@
   transform: translate(-50%, -50%) rotate(-45deg);
   border: none;
   outline: none;
-  background-color: v.$secondary-color;
+  background-color: v.$secondary-color-two;
 
   transition: transform 300ms ease, width 300ms ease, height 300ms ease;
 
