--- a/src/components/SkillBox/SkillBox.module.scss
+++ b/src/components/SkillBox/SkillBox.module.scss
@@ -7,7 +7,7 @@
   height: 52px;
   padding: 0 14px;
   border-radius: 10px;
-  background-color: v.$secondary-color;
+  background-color: v.$secondary-color-two;
   color: v.$primary-color-dark-shade;
   font-family: "Roboto";
   font-size: 1.2rem;
