--- a/src/partials/_mixins.scss
+++ b/src/partials/_mixins.scss
@@ -7,5 +7,5 @@
 
 @mixin dark-theme-template {
   background-color: v.$primary-color-dark;
-  color: v.$secondary-color-two;
+  color: v.$secondary-color;
 }
