--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,9 +1,10 @@
 $primary-color-dark-shade: #16161a;
 $primary-color-dark: #25252d;
 $primary-color-dark-tint: #34343f;
-$primary-color-medium-shade: #434351;
-$primary-color-medium: #6f6f89;
+// $primary-color-medium-shade: #434351;
+// $primary-color-medium: #6f6f89;
+$primary-color-light-shade: #83838c;
 $primary-color-light: #b5b5c0;
-$secondary-color: #d8a3b5;
-$secondary-color-two: #5fe88d;
+$secondary-color: #5fe88d;
+$secondary-color-two: #d8a3b5;
 $accent-color: #fff44f;
