Create SectionHeading component

--- a/src/sections/ContactSection/ContactSection.module.scss
+++ b/src/sections/ContactSection/ContactSection.module.scss
@@ -2,8 +2,10 @@
 
 .contact {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 4rem;
   @include m.section-dimensions;
   background-color: red;
 }
