Add HeaderMenu as a valid snapTarget for scrollSnapOnFocus

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,5 +2,6 @@
   position: relative;
   height: 100vh;
   overflow-y: scroll;
+  scrollbar-width: none;
   font-family: "Gochi Hand", "cursive";
 }
