Add underline component to form fields and animate it

--- a/src/components/FormField/FormField.module.scss
+++ b/src/components/FormField/FormField.module.scss
@@ -1,6 +1,9 @@
 @use "../../partials/variables" as v;
 
 .label-field-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
   width: 100%;
 }
 
