Create SubmitFormButton component and animate it

--- a/src/components/FormField/FormField.module.scss
+++ b/src/components/FormField/FormField.module.scss
@@ -29,6 +29,10 @@
   &::placeholder {
     color: v.$primary-color-light-shade;
   }
+
+  &:focus::placeholder {
+    color: transparent;
+  }
 }
 
 .field-large {
