--- a/src/components/HeaderMenu/HeaderMenu.module.scss
+++ b/src/components/HeaderMenu/HeaderMenu.module.scss
@@ -4,6 +4,6 @@
   height: 100px;
   z-index: 100;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
 }
