--- a/src/sections/AboutSection/AboutSection.module.scss
+++ b/src/sections/AboutSection/AboutSection.module.scss
@@ -2,6 +2,7 @@
 
 .about {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   @include m.section-dimensions;
