--- a/src/components/ContactForm/ContactForm.module.scss
+++ b/src/components/ContactForm/ContactForm.module.scss
@@ -1,11 +1,19 @@
 .form {
   display: flex;
   flex-direction: column;
+  // align-items: flex-end;
+  align-items: flex-end;
+
   gap: 0.5rem;
-  width: 50%;
+  width: 40%;
+
+  > :nth-last-child(2) {
+    margin-bottom: 2rem;
+  }
 }
 
 .personal-info {
   display: flex;
+  width: 100%;
   gap: 3rem;
 }
