--- a/src/index.scss
+++ b/src/index.scss
@@ -8,12 +8,12 @@
   box-sizing: border-box;
 }
 
-html {
-  overflow: hidden;
-  ::-webkit-scrollbar {
-    display: none;
-  }
-}
+// html {
+//   overflow: hidden;
+//   ::-webkit-scrollbar {
+//     display: none;
+//   }
+// }
 
 body {
   margin: 0;
