--- a/src/components/Notification/Notification.module.scss
+++ b/src/components/Notification/Notification.module.scss
@@ -1,14 +1,12 @@
 @use "../../partials/variables" as v;
 
 .notification {
-  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 300px;
   height: 50px;
-  right: 10px;
-  bottom: 10px;
+  margin-top: 0.5rem;
   background-color: v.$accent-color;
-  z-index: 1000;
+  font-family: "Roboto";
 }
