--- a/src/components/Notification/Notification.module.scss
+++ b/src/components/Notification/Notification.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   width: 300px;
   height: 50px;
   margin-top: 0.5rem;
