--- a/src/components/Notification/Notification.module.scss
+++ b/src/components/Notification/Notification.module.scss
@@ -7,7 +7,36 @@
   text-align: center;
   width: 300px;
   height: 50px;
-  margin-top: 0.5rem;
+  transform: translateX(150%);
+  margin-top: -2rem;
   background-color: v.$accent-color;
-  font-family: "Roboto";
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+
+  transition: transform 500ms ease, margin-top 300ms ease;
+}
+
+// .notification-enter {
+//   transform: translateX(150%);
+//   margin-top: -2rem;
+// }
+
+.notification-enter-active {
+  transform: translateX(-4%);
+  margin-top: 0.5rem;
+}
+
+.notification-enter-done {
+  transform: translateX(0);
+  margin-top: 0.5rem;
+  transition: transform 200ms ease;
+}
+
+.notification-exit {
+  transform: translateX(0%);
+  // transition: transform 400ms ease;
+}
+
+.notification-exit-active {
+  transform: translateX(150%);
+  // transition: transform 400ms ease;
 }
