--- a/src/components/SkillBoxes/SkillBoxes.module.scss
+++ b/src/components/SkillBoxes/SkillBoxes.module.scss
@@ -1,6 +1,8 @@
 .skill-boxes {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  flex-wrap: wrap;
+  width: 35%;
   gap: 1rem;
 }
