Add snake and portfolio projects

--- a/src/sections/ProjectsSection/ProjectsSection.module.scss
+++ b/src/sections/ProjectsSection/ProjectsSection.module.scss
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  transform: translateY(6rem);
+  padding-top: 3rem;
 }
 
 // .projects-light {
