--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  height: 290px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.8);
   font-family: "Roboto";
   user-select: none;
@@ -64,5 +65,5 @@
 
 .project-image {
   width: 100%;
-  height: 300px;
+  height: 100%;
 }
