--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -1,11 +1,9 @@
 .projects {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  display: flex;
+  display: grid;
   justify-content: center;
+  grid-template-columns: repeat(2, max-content);
   align-items: center;
-  gap: 8rem;
+  gap: 3rem;
+  width: 80%;
+  margin: 3rem auto;
 }
