--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -12,7 +12,7 @@
   user-select: none;
   opacity: 0;
   // margin-top: 10rem;
-  transform: translateY(10);
+  transform: translateY(5rem);
 
   transition: opacity 800ms ease, transform 800ms ease;
 
