--- a/src/components/ContactForm/ContactForm.module.scss
+++ b/src/components/ContactForm/ContactForm.module.scss
@@ -2,9 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-
   gap: 0.5rem;
-  width: 40%;
+  width: 768px;
 
   > :nth-last-child(2) {
     margin-bottom: 2rem;
@@ -15,4 +14,17 @@
   display: flex;
   width: 100%;
   gap: 3rem;
+}
+
+@media (max-width: 1200px) {
+  .form {
+    width: 64%;
+  }
+}
+
+@media (max-width: 768px) {
+  .personal-info {
+    flex-direction: column;
+    gap: 0;
+  }
 }
