--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -6,12 +6,12 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  height: 290px;
+  height: 100%;
+  width: 100%;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.8);
   font-family: "Roboto";
   user-select: none;
   opacity: 0;
-  // margin-top: 10rem;
   transform: translateY(5rem);
 
   transition: opacity 800ms ease, transform 800ms ease;
@@ -29,7 +29,6 @@
 
 .project-visible {
   opacity: 1;
-  // margin-top: 0;
   transform: translateY(0);
 }
 
@@ -67,14 +66,16 @@
   font-size: 2.25rem;
 }
 
-.icon {
-  font-size: 2.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .project-image {
   width: 100%;
   height: 100%;
 }
+
+// @media (max-width: 1500px) {
+//   .project {
+//     height: 200px;
+//   }
+//   .title {
+//     font-size: 2rem;
+//   }
+// }
