--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -58,14 +58,22 @@
 }
 
 .title {
-  font-size: max(1rem, min(2.25vw, 2.25rem));
-  // font-size: 2.25rem;
+  font-size: max(1.25rem, min(2.25vw, 2.25rem));
   text-align: center;
 }
 
 .github-link {
   width: 17.5%;
   height: 17.5%;
+}
+
+.button-wrapper {
+  width: 40%;
+  height: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: -4px;
 }
 
 .project-image {
