--- a/src/components/SectionHeading/SectionHeading.module.scss
+++ b/src/components/SectionHeading/SectionHeading.module.scss
@@ -2,3 +2,15 @@ h1 {
   font-size: 4rem;
   text-align: center;
 }
+
+@media (max-width: 1200px) {
+  h1 {
+    font-size: 3.5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 3rem;
+  }
+}
