Create smaller SkillBox for small viewports

--- a/src/components/SkillBox/typescriptLogo.scss
+++ b/src/components/SkillBox/typescriptLogo.scss
@@ -8,3 +8,9 @@
     fill: v.$secondary-color-two;
   }
 }
+
+@media (max-width: 768px) {
+  .typescript-logo-svg {
+    height: v.$skill-box-icon-size-small;
+  }
+}
