--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,3 +1,4 @@
+// colors
 $primary-color-dark-shade: #16161a;
 $primary-color-dark: #25252d;
 $primary-color-dark-tint: #34343f;
@@ -8,3 +9,7 @@ $primary-color-light: #b5b5c0;
 $secondary-color: #5fe88d;
 $secondary-color-two: #d8a3b5;
 $accent-color: #fff44f;
+
+// sizes
+$skill-box-icon-size: 2rem;
+$skill-box-icon-size-small: 1.5rem;
