--- a/src/components/SkillBox/SkillBox.module.scss
+++ b/src/components/SkillBox/SkillBox.module.scss
@@ -18,5 +18,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 2rem;
+  font-size: v.$skill-box-icon-size;
+}
+
+@media (max-width: 768px) {
+  .icon {
+    font-size: v.$skill-box-icon-size-small;
+  }
+  .skill-box {
+    height: 40px;
+    font-size: 1rem;
+  }
 }
