Create Subheading component, label SkillBoxes appropriately, and improve layout

--- a/src/components/SectionHeading/SectionHeading.module.scss
+++ b/src/components/SectionHeading/SectionHeading.module.scss
@@ -1,16 +1,16 @@
-h1 {
+.heading {
   font-size: 4rem;
   text-align: center;
 }
 
 @media (max-width: 1200px) {
-  h1 {
+  .heading {
     font-size: 3.5rem;
   }
 }
 
 @media (max-width: 768px) {
-  h1 {
+  .heading {
     font-size: 3rem;
   }
 }
