--- a/src/components/ContactForm/ContactForm.module.scss
+++ b/src/components/ContactForm/ContactForm.module.scss
@@ -4,10 +4,19 @@
   align-items: flex-end;
   gap: 0.5rem;
   width: 768px;
+  opacity: 0;
+  transform: translateY(5rem);
+
+  transition: opacity 800ms ease, transform 800ms ease;
 
   > :nth-last-child(2) {
     margin-bottom: 2rem;
   }
+}
+
+.form-visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .personal-info {
