--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -7,7 +7,7 @@ $primary-color-medium: #6f6f89;
 $primary-color-light-shade: #83838c;
 $primary-color-light: #b5b5c0;
 $secondary-color: #5fe88d;
-$secondary-color-two: #d8a3b5;
+$secondary-color-two: #c27ba0;
 $accent-color: #fff44f;
 
 // sizes
