--- a/src/partials/_mixins.scss
+++ b/src/partials/_mixins.scss
@@ -9,3 +9,12 @@
   background-color: v.$primary-color-dark;
   color: v.$secondary-color;
 }
+
+@mixin light-theme-template {
+  background-color: v.$primary-color-light;
+  color: v.$primary-color-dark-shade;
+}
+
+@mixin color-transition {
+  transition: background-color 550ms ease, color 550ms ease;
+}
