--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -8,6 +8,8 @@ $primary-color-light-shade: #83838c;
 $primary-color-light: #b5b5c0;
 $secondary-color: #5fe88d;
 $secondary-color-two: #c27ba0;
+$secondary-color-three: #b71c1c;
+$secondary-color-four: #008cba;
 $accent-color: #fff44f;
 
 // sizes
