--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -15,14 +15,15 @@
   font-size: 1.2rem;
   overflow: hidden;
   box-sizing: content-box;
-  border: 2px solid v.$accent-color;
 }
 
 .button-container-dark {
   color: v.$accent-color;
+  border: 2px solid v.$accent-color;
 }
 .button-container-light {
   color: v.$primary-color-dark-shade;
+  border: 2px solid v.$primary-color-dark-shade;
 }
 
 .button-container-resizeable {
@@ -50,9 +51,17 @@
   mask-position: 100% 0;
   -webkit-mask-position: 100% 0;
   border: none;
-  background-color: v.$accent-color;
   color: v.$primary-color-dark;
   font-family: inherit;
+}
+
+.button-dark {
+  background-color: v.$accent-color;
+}
+
+.button-light {
+  background-color: v.$primary-color-dark-shade;
+  color: red;
 }
 
 .button-text {
