--- a/src/partials/_mixins.scss
+++ b/src/partials/_mixins.scss
@@ -12,7 +12,7 @@
 
 @mixin light-theme-template {
   background-color: v.$primary-color-light;
-  color: v.$primary-color-dark-shade;
+  color: v.$secondary-color-three;
 }
 
 @mixin color-transition {
