--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -5,7 +5,7 @@ $primary-color-dark-tint: #34343f;
 $primary-color-medium-shade: #434351;
 $primary-color-medium: #6f6f89;
 $primary-color-light-shade: #83838c;
-$primary-color-light: #b5b5c0;
+$primary-color-light: #dadae0;
 $secondary-color: #5fe88d;
 $secondary-color-two: #c27ba0;
 $secondary-color-three: #b71c1c;
