--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -6,6 +6,7 @@ $primary-color-medium-shade: #434351;
 $primary-color-medium: #6f6f89;
 $primary-color-light-shade: #83838c;
 $primary-color-light: #dadae0;
+$primary-color-light-tint: #f9f9fa;
 $secondary-color: #5fe88d;
 $secondary-color-two: #c27ba0;
 $secondary-color-three: #b71c1c;
