--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,7 +1,11 @@
 .app {
   position: relative;
   height: 100vh;
-  overflow-y: scroll;
+  overflow-y: hidden;
   scrollbar-width: none;
   font-family: "Gochi Hand", "cursive";
+}
+
+.app-scrollable {
+  overflow-y: scroll;
 }
