--- a/src/components/LoadingScreen/LoadingScreen.module.scss
+++ b/src/components/LoadingScreen/LoadingScreen.module.scss
@@ -11,3 +11,20 @@
   background-color: v.$primary-color-dark;
   font-size: 5rem;
 }
+
+.logo-letter {
+  position: absolute;
+  color: v.$secondary-color;
+  font-family: serif;
+  top: 43.5%;
+  opacity: 0;
+
+  animation: fadeIn 500ms ease forwards;
+  animation-delay: 3300ms;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
