--- a/src/components/LoadingScreen/triangle.scss
+++ b/src/components/LoadingScreen/triangle.scss
@@ -4,17 +4,23 @@
   width: 400px;
   stroke: v.$secondary-color;
   stroke-width: 3px;
-  stroke-dasharray: 1000;
-  stroke-dashoffset: 1000;
-  stroke-dashoffset: 1000;
+  stroke: transparent;
+}
+
+.loading-triangle-svg-colored {
+  stroke: v.$secondary-color;
 }
 
 .loading-triangle-svg-animated {
   .stroke1 {
+    stroke-dasharray: 1000;
+    stroke-dashoffset: 1000;
     animation: outlineAnimation 2000ms ease forwards;
     animation-delay: 300ms;
   }
   .stroke2 {
+    stroke-dasharray: 900;
+    stroke-dashoffset: 900;
     animation: outlineAnimation 2000ms ease forwards;
     animation-delay: 2100ms;
   }
