--- a/src/components/Notification/Notification.module.scss
+++ b/src/components/Notification/Notification.module.scss
@@ -5,11 +5,13 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 300px;
+  width: 270px;
   height: 50px;
   transform: translateX(150%);
   margin-top: -2rem;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+  font-family: "Roboto";
+  font-size: 0.9rem;
 
   transition: transform 500ms ease, margin-top 300ms ease;
 }
@@ -40,4 +42,12 @@
 
 .notification-exit-active {
   transform: translateX(150%);
+}
+
+.icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  margin-left: 0.8rem;
 }
